# FinanceAgent

./: .env.example  LICENSE  README.md  README_zh.md  feature.md  main.py  pyproject.toml  server.py
data/chroma/: chroma.sqlite3
data/memory/chroma/: chroma.sqlite3
data/memory/records/: 0c0306b5.json  878c6408.json  9ca43ae6.json  c415740a.json  ce5fa301.json  e15cea2e.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts
frontend/src/components/: AnalysisPanel.vue  ChatPanel.vue  ComparisonView.vue  DebateTranscript.vue  FinancialTables.vue  MarketDataBar.vue  NewsFeed.vue  PeerComparisonPanel.vue  ProgressTracker.vue  SourcesPanel.vue  TickerForm.vue  ValuationPanel.vue
frontend/src/composables/: useSSE.ts
frontend/src/stores/: analysis.ts
src/agents/: analyst.py  critic.py  fundamental.py  peer_comparison.py  technical.py  valuation.py
src/memory/: store.py
src/tools/: exporter.py  sec_retriever.py  stock_utils.py  tracing.py
src/workflow/: langgraph_flow.py
